@@ -116,6 +116,7 @@ Other changes:
  - gui: removed manager::is_loading_ui() (no longer necessary)
  - gui: removed manager::begin() and end()
  - gui: removed frame::is_mouse_enabled; use is_mouse_click_enabled and is_mouse_move_enabled
+ - gui: removed frame::is_in_frame; use is_in_region
  - gui: edit_box::set_text_insets now takes a single bounds2f argument
  - gui: frame::on_script now takes the full script name ("OnUpdate" vs "Update")
  - gui: frame::on_script now takes a 'const event_data&' instead of an 'event*' argument
